tests/specs/check/use_unknown_in_catch_variables/main.ts
try {
  throw new Error();
} catch (e) {
  console.log(e.message);
}
